# will-counter

./: .env  .env.example  .gitignore  CLAUDE.md  CLAUDE_ACTIONS_SUMMARY.md  DEVELOPMENT.md  EXPO_SETUP.md  ISSUE_BREAKDOWN.md  MULTIPLE_ISSUES_SUMMARY.md  QUICK_START_ALTERNATIVE.md  README.md  SECURITY.md  SECURITY_MIGRATION.md  SECURITY_REPORT.md  SIMPLE_SUPABASE_TEST.md  STARTUP_INSTRUCTIONS.md  SUPABASE_CONNECTION_TEST.md  SUPABASE_SETUP.md  WORKING_SOLUTION.md  app.json  create-issues.sh  env.example  package-lock.json  package.json  supabase-schema.sql  test-security.sh  test-supabase-connection.sh  validate-issues.sh
.claude/: CLAUDE.md  context.md  preferences.md  settings.json  shortcuts.md  templates.md
.github/: copilot-instructions.md
api/: Dockerfile  build.gradle.kts  fly.toml  package.json  settings.gradle.kts
backend/: .dockerignore  .env.example  Dockerfile
backend/api/: Cargo.toml
backend/api/src/: auth.rs  config.rs  main.rs  routes.rs  supabase.rs  types.rs
docs/: actual-prompt.txt  agent-workflow-usage.md  claude-actions-configuration.md  claude-actions-demo.md  claude-actions-security.md  claude-auth0-native-module-fix-prompt.md  claude-auth0-rls-prompt.md  claude-frontend-api-integration-prompt.md  claude-frontend-api-prompt-short.md  claude-prompt.md  claude-supabase-migration-prompt.md  claude-supabase-prompt-short.md  claude-ui-redesign-prompt.md  how-to-use-prompts.md  optimized-development-workflow.md  plan.md  prompt-engineering-guide.md  testflight-deployment.md
frontend/: .env.example  .eslintrc.js  App.backup.tsx  App.tsx  (+11 more)
(+155 files in other folders)
